examples/Error/Demo3.mf
<#Module=Demo>

'---------------------------------------
#Include "*" function Debug() : msgbox "Include = " & mf_Data(2) & mf_Data(3) & vbcrlf & "Number = " & mf_Data(4) & vbcrlf & "Text = " & mf_Data(5),,"Error" : end function

'---------------------------------------
#Include <..\Type\Dev_1_1.mf> '* Debug
#Include <http://asdfjagfkafn.ru> '* Debug
#Include <http://google.ru> '* Debug
#Include <res://test> '* msgbox mf_Data(4) & " - " & mf_Data(5)
#Include <https://langmf.ru/ftp/other/demo.mf> '* Debug

'---------------------------------------
Sub Load(cmdLine)
    msgbox "Load App"
    msgbox Demo("OK")
    endmf
End Sub
<#Module>